syntax = "proto3";
package greet;

option go_package = "./greet";

service GreetService {
  // Unary service
  rpc Greet(GreetRequest) returns (GreetResponse) {};
  // Server Streaming Service
  rpc GreetManyTimes(GreetManyTimesRequest)
      returns (stream GreetManyTimesResponse) {};
  // Client Stream Service
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
  rpc GreetEveryone(stream GreetEveryoneRequest)
      returns (stream GreetEveryoneResponse) {};
}

// Greeting type
message Greeting {
  string first_name = 1;
  string last_name = 2;
}

// Unary request and response
message GreetRequest { Greeting greeting = 1; }
message GreetResponse { string result = 1; }

// Server stream request and response
message GreetManyTimesRequest { Greeting greeting = 1; }
message GreetManyTimesResponse { string result = 1; }

// Client stream request and response
message LongGreetRequest { Greeting greeting = 1; }
message LongGreetResponse { string result = 1; }

// Bidirectional stream request and response messages
message GreetEveryoneRequest { Greeting greeting = 1; }
message GreetEveryoneResponse { string result = 1; }